--- a/pom.xml
+++ b/pom.xml
@@ -166,12 +166,12 @@
 	    </plugins>
 	  </reporting>
 	
-    <distributionManagement>
-    <repository>
-        <id>central</id>
-        <name>devops-training-releases</name>
-        <url>http://localhost:8081/artifactory/ext-release-local</url>
-    </repository>
+   <distributionManagement>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>devops-training-snapshots</name>
+        <url>http://localhost:8081/artifactory/libs-snapshot-local</url>
+    </snapshotRepository>
 </distributionManagement>
 
 </project>
